--- a/src/app/modules/case/activity-log/activity-log.component.html
+++ b/src/app/modules/case/activity-log/activity-log.component.html
@@ -26,10 +26,10 @@
 <!--Radio Buttons-->
 <div id="table1">&nbsp;
     <span class="siteRadio_1">
-        <mat-radio-button  value="1" [checked]="isSelected" [(ngModel)]="localTime">Local Time</mat-radio-button>
+        <mat-radio-button  value="1" [checked]="isSelected">Local Time</mat-radio-button>
     </span>
     <span class="siteRadio_2">
-        <mat-radio-button value="2" [(ngModel)]="siteTime">Site Time</mat-radio-button>
+        <mat-radio-button value="2" >Site Time</mat-radio-button>
     </span>
 
 <span>
