--- a/src/app/modules/case/case-info/case-info.component.css
+++ b/src/app/modules/case/case-info/case-info.component.css
@@ -207,7 +207,7 @@
     margin-top: 2%;
   }
   
-  .pannel_5,.pannel_6,.pannel_7,.pannel_8{
+  .pannel_5,.pannel_6,.pannel_7,.pannel_8,.pannel_9{
     margin-top: 2%;
   }
   
