--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <button mat-button color="primary" (click)="createCase()"><i class="small icon-controls-subscribe"></i> Create Case</button>
     <button mat-button color="primary"><i class="small icon-people-groupcollaboration"></i> Contacts</button>
     <button mat-button color="primary"><i class="small icon-location-geofence"></i> Sites</button>
-    <button mat-button color="primary" (click)="wipBinsSideNav.toggle();getWipBinsQueuesData();"><i class="small icon-content-seriessubscribetablet" ></i> WIP Bins / Queues </button>
+    <button mat-button color="primary" (click)="wipBinsSideNav.toggle();"><i class="small icon-content-seriessubscribetablet" ></i> WIP Bins / Queues </button>
     <button mat-button color="primary"><i class="small icon-documents-searchfind" role="img" aria-label=""></i> Advanced Search </button>
     <button color="primary" mat-button [matMenuTriggerFor]="menu"><i class="small icon-content-listguide"></i> Menu</button>
     <mat-menu #menu="matMenu">
@@ -23,10 +23,7 @@
     <mat-drawer class="side-nav-width-queues-wipbins" #wipBinsSideNav [mode]="'over'">
         <!--Display Area for Queues and WipBins-->
         <!-- Pending... -->
-        <mat-list role="list">
-            <mat-list-item role="listitem">WIP Bins</mat-list-item>
-            <mat-list-item role="listitem">Queues</mat-list-item>
-        </mat-list>
+        <bbw-queues-host></bbw-queues-host>
     </mat-drawer>
     <mat-drawer-content>
         <!--  I am content for case Ids INFO Pending... -->
