--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,7 +10,7 @@
 .main-sidenav-queues-wipbins {
     position: absolute;
     top:85px;
-    height: 100%;
+    /* height: 100%; */
     left:0;
     right:0;
     bottom:0;
