[ 01-DEC-2018 ] Displaying all data for wipbins and queues case info

--- a/src/app/modules/case/case-info/case-info.component.html
+++ b/src/app/modules/case/case-info/case-info.component.html
@@ -223,7 +223,7 @@
                                     Comm History
                                   </mat-panel-title>
                                   </mat-expansion-panel-header>
-                                  <bbw-comm-history [caseId]="caseInfo.caseId"></bbw-comm-history>
+                                  <bbw-comm-history [caseInfo]="caseInfo"></bbw-comm-history>
                                   </mat-expansion-panel>
           </mat-accordion>      
     </div>
