--- a/src/app/modules/queues/queues-host/queues-host.component.css
+++ b/src/app/modules/queues/queues-host/queues-host.component.css
@@ -1,3 +1,10 @@
+.mat-tree-node{
+    margin-left: -12%;
+}
+.hostSimple{
+    padding-left: 12%;
+}
+
 .mat-tree{
     position: absolute;
     top: 1%;
