[ 03-DEC-2018 ] Displaying all data for wipbins and queues case info

--- a/src/app/modules/case/brass/brass.component.html
+++ b/src/app/modules/case/brass/brass.component.html
@@ -93,7 +93,7 @@
   <table>
       <tr>
           <td>Supplier Working :</td>
-          <td><button  class="btn1" mat-raised-button color="primary" (click)="openDialog()">SIR</button></td>
+          <td><button  class="btn1" mat-raised-button color="primary" (click)="sendSirRequestToBackend()">SIR</button></td>
           <td><button  class="btn2" mat-raised-button color="primary">UPDATE</button></td>
           <td><button  class="btn3" mat-raised-button color="primary">ADDITIONAL INFO</button></td>
       </tr>
