--- a/src/app/modules/queues/queues-host/queues-host.component.html
+++ b/src/app/modules/queues/queues-host/queues-host.component.html
@@ -1,8 +1,8 @@
 
-<mat-grid-list cols="12" rowHeight="100%">
+<mat-grid-list cols="10" rowHeight="640">
   <mat-grid-tile [colspan]="2" [rowspan]="1.3" class="mat-scroll">
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-          <mat-tree-node class="childHover" (click)="getCaseListFor(node.item)" *matTreeNodeDef="let node" matTreeNodePadding>
+          <mat-tree-node class="childHover alignItm" (click)="getCaseListFor(node.item)" *matTreeNodeDef="let node" matTreeNodePadding>
             &nbsp;{{node.item.title}}
           </mat-tree-node>
           <mat-tree-node class="hostSimple" *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
@@ -17,7 +17,7 @@
           </mat-tree-node>
         </mat-tree>
   </mat-grid-tile>
-  <mat-grid-tile [colspan]="10" [rowspan]="1.3" class="mat-scroll2">
+  <mat-grid-tile [colspan]="8" [rowspan]="1.3" class="mat-scroll2">
     <bbw-wipbin-case-list *ngIf="viewWipBinsWindow" [dataToDisplay]="wipBinsCaseListData" ></bbw-wipbin-case-list>
     <bbw-queues-case-list *ngIf="viewQueuesWindow" [dataToDisplay]="queuesCaseListData"></bbw-queues-case-list>
   </mat-grid-tile>
