--- a/src/app/modules/case/case-info/case-info.component.html
+++ b/src/app/modules/case/case-info/case-info.component.html
@@ -245,7 +245,7 @@
                                 Tap the pannel to view details
                               </mat-panel-description> -->
                             </mat-expansion-panel-header>
-                           <bbw-activity-log [caseId]="caseInfo.caseId"></bbw-activity-log>
+                           <bbw-activity-log [caseInfo]="caseInfo"></bbw-activity-log>
                           </mat-expansion-panel>
       
                           <!-- service information pannel -->
