[ 04-DEC-2018 ] Fixed compilation errors Displaying all data for wipbins and queues case info

--- a/src/app/modules/case/case-info/case-info.component.html
+++ b/src/app/modules/case/case-info/case-info.component.html
@@ -46,7 +46,7 @@
                          </mat-form-field>
                      
                          <mat-form-field class="email">
-                             <input matInput placeholder="Email" [(ngModel)]="caseInfo.tableContact.eMail">
+                             <input matInput placeholder="Email" [(ngModel)]="caseInfo.tableContact.email">
                          </mat-form-field>
                        </span>
                      <!-- </div> -->
