[ 04-DEC-2018 ] Fixed compilation errors Displaying all data for wipbins and queues case info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
 <mat-toolbar class="header-main-menu">
     <mat-label class="spaces" color="primary">Case Id:</mat-label>
     <mat-form-field>
-        <input maxlength="10" matInput type="text" [(ngModel)]="caseId">
-        <i (click)="getCaseInfo(caseId);caseId=''" class="small icon-arrows-outgoing-call mat-search-icon"></i>
-    </mat-form-field>
+        <input class="spaces" maxlength="10" matInput type="text" [(ngModel)]="caseId">
+        <!-- <i (click)="getCaseInfo(caseId);caseId=''" class="small icon-arrows-outgoing-call mat-search-icon"></i> -->
+    </mat-form-field>&nbsp;&nbsp;
+    <button mat-flat-button color="primary" (click)="getCaseInfo(caseId);caseId='';">Search</button>
     <span class="header-fill-remaining-space"></span>
     <button mat-button color="primary" (click)="createCase()"><i class="small icon-controls-subscribe"></i> Create Case</button>
     <button mat-button color="primary"><i class="small icon-people-groupcollaboration"></i> Contacts</button>
