--- a/src/app/modules/queues/queues-host/queues-host.component.html
+++ b/src/app/modules/queues/queues-host/queues-host.component.html
@@ -2,13 +2,13 @@
 <mat-grid-list cols="10" rowHeight="640">
   <mat-grid-tile [colspan]="2" [rowspan]="1.3" class="mat-scroll">
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-          <mat-tree-node class="childHover alignItm" (click)="getCaseListFor(node.item)" *matTreeNodeDef="let node" matTreeNodePadding>
+          <mat-tree-node class="childHover alignItm" (click)="getCaseListFor(node)" *matTreeNodeDef="let node" matTreeNodePadding>
             &nbsp;{{node.item.title}}
           </mat-tree-node>
           <mat-tree-node class="hostSimple" *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-            <span mat-button matTreeNodeToggle (click)="displayScreen(node.item);">
-              <i *ngIf="!treeControl.isExpanded(node)" class="small icon-controls-subscribe"></i>
-              <i *ngIf="treeControl.isExpanded(node)" class="small icon-controls-statusokay"></i>
+            <span mat-button matTreeNodeToggle (click)="displayScreen(node);">
+              <i *ngIf="!treeControl.isExpanded(node)" class="small icon-controls-subscribe">+</i>
+              <i *ngIf="treeControl.isExpanded(node)" class="small icon-controls-statusokay">-</i>
             </span>&nbsp;
             {{node.item}}
             <!-- <mat-progress-bar *ngIf="node.isLoading"
@@ -18,8 +18,8 @@
         </mat-tree>
   </mat-grid-tile>
   <mat-grid-tile [colspan]="8" [rowspan]="1.3" class="mat-scroll2">
-    <bbw-wipbin-case-list *ngIf="viewWipBinsWindow" [dataToDisplay]="wipBinsCaseListData" ></bbw-wipbin-case-list>
-    <bbw-queues-case-list *ngIf="viewQueuesWindow" [dataToDisplay]="queuesCaseListData"></bbw-queues-case-list>
+    <bbw-wipbin-case-list *ngIf="viewWipBinsWindow" [dataToDisplay]="wipBinsCaseListData" [headerInfo]="headerInfo" ></bbw-wipbin-case-list>
+    <bbw-queues-case-list *ngIf="viewQueuesWindow" [dataToDisplay]="queuesCaseListData" [headerInfo]="headerInfo"></bbw-queues-case-list>
   </mat-grid-tile>
   
 </mat-grid-list>
