--- a/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
+++ b/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
@@ -1,5 +1,5 @@
 <div>
-    <mat-card>Wipbin Clarify - RDC</mat-card>
+    <mat-card>{{headerInfo.node}} {{headerInfo.title}}</mat-card>
   </div>
   <div class="planner-dropdown">
   <table class="wipbin-drop">
@@ -55,51 +55,51 @@
                 <!-- Position Column -->
                 <ng-container matColumnDef="type">
                   <th mat-header-cell *matHeaderCellDef> Type </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.type}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.type}} </td>
                 </ng-container>
               
                 <!-- Name Column -->
                 <ng-container matColumnDef="id">
                   <th mat-header-cell *matHeaderCellDef> ID </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.id}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.idNumber}} </td>
                 </ng-container>
               
                 <!-- Weight Column -->
-                <ng-container matColumnDef="sitename">
+                <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef> Special Order</th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.sitename}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.name}} </td>
                 </ng-container>
               
                 <!-- age Column -->
                 <ng-container matColumnDef="age">
-                  <th mat-header-cell *matHeaderCellDef> Site </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.age}} </td>
+                  <th mat-header-cell *matHeaderCellDef> Age </th>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.age}} </td>
                 </ng-container>
                 <!--Condition-->
                 <ng-container matColumnDef="Condition">
                   <th mat-header-cell *matHeaderCellDef>Condition </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.condition}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.condition}} </td>
                 </ng-container>
                 <!--Status-->
                 <ng-container matColumnDef="status">
                   <th mat-header-cell *matHeaderCellDef> Status </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.status}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.status}} </td>
                 </ng-container>
              
                 <!--Priority-->
                 <ng-container matColumnDef="priority">
                   <th mat-header-cell *matHeaderCellDef> Priority </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.priority}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.priority}} </td>
                 </ng-container>
                 <!--Serveri-->
                 <ng-container matColumnDef="severity">
                   <th mat-header-cell *matHeaderCellDef> Severity </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.severity}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.severity}} </td>
                 </ng-container>
                 <!--Title-->
                 <ng-container matColumnDef="title">
                   <th mat-header-cell *matHeaderCellDef> Title </th>
-                  <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.title}} </td>
+                  <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.title}} </td>
                 </ng-container>
               
                 <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
