--- a/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
+++ b/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
@@ -50,7 +50,7 @@
     </table>
   </div>
   <div class="plnrBrdr">
-        <table mat-table [dataSource]="dataToDisplay" class="mat-elevation-z8">
+        <table mat-table [dataSource]="wipBinCase" class="mat-elevation-z8">
    
                 <!-- Position Column -->
                 <ng-container matColumnDef="type">
@@ -59,7 +59,7 @@
                 </ng-container>
               
                 <!-- Name Column -->
-                <ng-container matColumnDef="id">
+                <ng-container matColumnDef="idNumber">
                   <th mat-header-cell *matHeaderCellDef> ID </th>
                   <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.idNumber}} </td>
                 </ng-container>
@@ -76,7 +76,7 @@
                   <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.age}} </td>
                 </ng-container>
                 <!--Condition-->
-                <ng-container matColumnDef="Condition">
+                <ng-container matColumnDef="condition">
                   <th mat-header-cell *matHeaderCellDef>Condition </th>
                   <td mat-cell *matCellDef="let wipBinCase"> {{wipBinCase.condition}} </td>
                 </ng-container>
