--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <input class="spaces" maxlength="10" matInput type="text" [(ngModel)]="caseId">
         <!-- <i (click)="getCaseInfo(caseId);caseId=''" class="small icon-arrows-outgoing-call mat-search-icon"></i> -->
     </mat-form-field>&nbsp;&nbsp;
-    <button mat-flat-button color="primary" (click)="getCaseInfo(caseId);caseId='';">Search</button>
+    <button mat-flat-button color="primary" (click)="getCaseInfo(caseId);caseId='';">Open</button>
     <span class="header-fill-remaining-space"></span>
     <button mat-button color="primary" (click)="createCase()"><i class="small icon-controls-subscribe"></i> Create Case</button>
     <button mat-button color="primary"><i class="small icon-people-groupcollaboration"></i> Contacts</button>
