[ 05-DEC-2018 ] Fixed compilation errors Displaying all data for wipbins and queues case info

--- a/src/app/modules/case/case-info/case-info.component.html
+++ b/src/app/modules/case/case-info/case-info.component.html
@@ -196,9 +196,9 @@
                   <mat-accordion class="example-headers-align">
                     <!-- cases notes pannel -->
                     <button id="btn1" mat-raised-button (click)="changeComp(3);" color="primary">BRASS</button>&nbsp;
-                    <button id="btn1" mat-raised-button (click)="changeComp(5);" color="primary">Commitment Log</button>&nbsp;
+                    <!-- <button id="btn1" mat-raised-button (click)="changeComp(5);" color="primary">Commitment Log</button>&nbsp;
                     <button id="btn1" mat-raised-button (click)="changeComp(6);" color="primary">Select Commitments</button>&nbsp;
-                    <button id="btn1" mat-raised-button (click)="changeComp(7);" color="primary">HSIA Info</button>&nbsp;
+                    <button id="btn1" mat-raised-button (click)="changeComp(7);" color="primary">HSIA Info</button>&nbsp; -->
                     <mat-expansion-panel class="pannel_4">
                         <mat-expansion-panel-header [collapsedHeight]="MAT_TAB_COLLAPSED_HEIGHT" [expandedHeight]="MAT_TAB_EXPANDED_HEIGHT">
                           <mat-panel-title>
