--- a/src/app/modules/queues/queues-case-list/queues-case-list.component.html
+++ b/src/app/modules/queues/queues-case-list/queues-case-list.component.html
@@ -55,7 +55,7 @@
      <!-- Position Column -->
      <ng-container matColumnDef="type">
        <th mat-header-cell *matHeaderCellDef> Type </th>
-       <!-- <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.type}} </td> -->
+       <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.type}} </td>
      </ng-container>
    
      <!-- Name Column -->
