--- a/src/app/modules/case/activity-log/activity-log.component.html
+++ b/src/app/modules/case/activity-log/activity-log.component.html
@@ -53,7 +53,7 @@
   <!-- Position Column -->
   <ng-container matColumnDef="Activity">
       <th mat-header-cell *matHeaderCellDef> Activity </th>
-      <td mat-cell *matCellDef="let activityLog"> {{activityLog.title}} </td>
+      <td mat-cell *matCellDef="let activityLog"> {{activityLog.actName}} </td>
   </ng-container>
 
   <!-- Name Column -->
@@ -71,7 +71,7 @@
   <!-- Symbol Column -->
   <ng-container matColumnDef="Additional Information">
     <th mat-header-cell *matHeaderCellDef> Additional Information </th>
-    <td mat-cell *matCellDef="let activityLog"> {{activityLog.addnlInfo}} </td>
+    <td mat-cell *matCellDef="let activityLog"> {{activityLog.addInfo}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
