--- a/src/app/modules/queues/queues-case-list/queues-case-list.component.html
+++ b/src/app/modules/queues/queues-case-list/queues-case-list.component.html
@@ -53,7 +53,7 @@
  <table mat-table [dataSource]="queuesCase" class="mat-elevation-z8">
    
      <!-- Position Column -->
-     <ng-container matColumnDef="type">
+     <ng-container matColumnDef="type1">
        <th mat-header-cell *matHeaderCellDef> Type </th>
        <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.type}} </td>
      </ng-container>
