--- a/src/app/modules/case/comm-history/comm-history.component.html
+++ b/src/app/modules/case/comm-history/comm-history.component.html
@@ -30,7 +30,7 @@
     <!-- Hold Reason Column -->
     <ng-container matColumnDef="Hold Reason">
       <th mat-header-cell *matHeaderCellDef> Hold Reason </th>
-      <td mat-cell *matCellDef="let commHistory"> {{commHistory}} </td>
+      <td mat-cell *matCellDef="let commHistory"> {{commHistory.sample}} </td>
     </ng-container>
 
    <!-- Offs Column -->
