--- a/src/app/modules/queues/queues-host/queues-host.component.html
+++ b/src/app/modules/queues/queues-host/queues-host.component.html
@@ -23,3 +23,4 @@
   </mat-grid-tile>
   
 </mat-grid-list>
+<mat-progress-spinner style="margin-top:-34%;left: 45%;" *ngIf="isLoading" color="success" mode="indeterminate"></mat-progress-spinner>
