--- a/src/app/modules/queues/queues-case-list/queues-case-list.component.html
+++ b/src/app/modules/queues/queues-case-list/queues-case-list.component.html
@@ -119,7 +119,7 @@
    </table>
 
 </div>
-
+<mat-paginator class="pagination-row" [pageSizeOptions]="[50, 100, 200]" showFirstLastButtons></mat-paginator>
 <table class="myTitle">
  <tr>
    <td class="titleTd"><label>Title</label></td>
