--- a/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
+++ b/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
@@ -108,7 +108,10 @@
                                                                   (click)="highlight(row)"
                                                                   (click)="setClickedRow(row)"></tr>
               </table>
+              
    </div>
+   <mat-paginator class="pagination-row" [pageSizeOptions]="[50, 100, 200]" showFirstLastButtons></mat-paginator>
+   
    <table class="myTitle">
     <tr>
       <td class="titleTd"><label>Title</label></td>
